clusters can now run sa without running entire pipeline

--- a/notebooks/test_functions_calem.ipynb
+++ b/notebooks/test_functions_calem.ipynb
@@ -2,54 +2,163 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "34496dbf",
+   "execution_count": 8,
+   "id": "2b798f9c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "a must be greater than 0 unless no samples are taken",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m-----------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                      Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-48a282d12ea5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mbig_picture\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_merged_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mraw_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_merged_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../raw_data/data 12k/\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/.pyenv/versions/3.8.6/envs/big_picture/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36msample\u001b[0;34m(self, n, frac, replace, weights, random_state, axis)\u001b[0m\n\u001b[1;32m   5348\u001b[0m             )\n\u001b[1;32m   5349\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5350\u001b[0;31m         \u001b[0mlocs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis_length\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5351\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtake\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5352\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mmtrand.pyx\u001b[0m in \u001b[0;36mnumpy.random.mtrand.RandomState.choice\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: a must be greater than 0 unless no samples are taken"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
    "source": [
-    "from big_picture import get_merged_data\n",
-    "import pandas as pd\n",
-    "raw_data = get_merged_data.get_data(\"../raw_data/data 12k/\").sample(n=1000)"
+    "%load_ext autoreload\n",
+    "\n",
+    "%autoreload 2"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ded5759d",
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "34496dbf",
    "metadata": {},
+   "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "raw_data = pd.read_csv('../big_picture/data/scraped_data_200.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "eb33bcea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>category</th>\n",
+       "      <th>headline</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>link</th>\n",
+       "      <th>short_description</th>\n",
+       "      <th>date</th>\n",
+       "      <th>content</th>\n",
+       "      <th>pre_processed_text</th>\n",
+       "      <th>minor_preprocessing</th>\n",
+       "      <th>label</th>\n",
+       "      <th>nrs_count</th>\n",
+       "      <th>questions</th>\n",
+       "      <th>exclamations</th>\n",
+       "      <th>irony</th>\n",
+       "      <th>vocab_richness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CRIME</td>\n",
+       "      <td>There Were 2 Mass Shootings In Texas Last Week...</td>\n",
+       "      <td>Melissa Jeltsen</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/texas-ama...</td>\n",
+       "      <td>She left her husband. He killed their children...</td>\n",
+       "      <td>2018-05-26</td>\n",
+       "      <td>DENTON, Texas ― Amanda Painter sat at the kit...</td>\n",
+       "      <td>[There, Were, Mass, Shootings, In, Texas, Last...</td>\n",
+       "      <td>There Were 2 Mass Shootings In Texas Last Week...</td>\n",
+       "      <td>Crime</td>\n",
+       "      <td>37</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.287574</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  category                                           headline  \\\n",
+       "0    CRIME  There Were 2 Mass Shootings In Texas Last Week...   \n",
+       "\n",
+       "           authors                                               link  \\\n",
+       "0  Melissa Jeltsen  https://www.huffingtonpost.com/entry/texas-ama...   \n",
+       "\n",
+       "                                   short_description        date  \\\n",
+       "0  She left her husband. He killed their children...  2018-05-26   \n",
+       "\n",
+       "                                             content  \\\n",
+       "0   DENTON, Texas ― Amanda Painter sat at the kit...   \n",
+       "\n",
+       "                                  pre_processed_text  \\\n",
+       "0  [There, Were, Mass, Shootings, In, Texas, Last...   \n",
+       "\n",
+       "                                 minor_preprocessing  label  nrs_count  \\\n",
+       "0  There Were 2 Mass Shootings In Texas Last Week...  Crime         37   \n",
+       "\n",
+       "   questions  exclamations  irony  vocab_richness  \n",
+       "0          4             4      0        0.287574  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from big_picture.pre_processor import pre_process\n",
+    "data = pre_process(raw_data)\n",
     "data.head(1)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "515889d4",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26e53022",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from big_picture.label import Label\n",
-    "label = Label(data,'test')"
+    "label = Label(data,'test', model_name='kmeans')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "041246ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label.clusters[0].df"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "785381f1",
+   "id": "2eec0d8a",
    "metadata": {},
-   "source": [
-    "label.clusters[0].df"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
